prevent output if whitespace

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #333;
+  background-color: #222;
   color: #ccc;
 }
 
@@ -20,7 +20,7 @@ body {
 }
 .input {
   font-size: 14px;
-  background-color: #333;
+  background-color: #222;
   color: #ddd;
   width: 100%;
   border: 3px solid #555;
@@ -40,8 +40,8 @@ body {
   font-size: 14px;
   color: #ddd;
   width: 100%;
-  background-color: #444;
-  border: 3px solid #444;
+  background-color: #272727;
+  border: 3px solid #272727;
   border-top: 0;
   border-bottom: 0;
   padding: 0px 5px;
